@@ -15,10 +15,7 @@ import com.dpw.runner.shipment.services.commons.responses.IRunnerResponse;
 import com.dpw.runner.shipment.services.commons.responses.RunnerResponse;
 import com.dpw.runner.shipment.services.dao.interfaces.*;
 import com.dpw.runner.shipment.services.dto.request.*;
-import com.dpw.runner.shipment.services.dto.request.awb.AwbNotifyPartyInfo;
-import com.dpw.runner.shipment.services.dto.request.awb.AwbSpecialHandlingCodesMappingInfo;
-import com.dpw.runner.shipment.services.dto.request.awb.CustomAwbRetrieveRequest;
-import com.dpw.runner.shipment.services.dto.request.awb.GenerateAwbPaymentInfoRequest;
+import com.dpw.runner.shipment.services.dto.request.awb.*;
 import com.dpw.runner.shipment.services.dto.response.*;
 import com.dpw.runner.shipment.services.dto.response.bridgeService.BridgeServiceResponse;
 import com.dpw.runner.shipment.services.dto.v1.response.OrgAddressResponse;
@@ -459,10 +456,8 @@ class AwbServiceTest extends CommonMocks {
 
 
         MawbHawbLink link = MawbHawbLink.builder().hawbId(2L).mawbId(3L).build();
-        Page<Awb> resultPage = new PageImpl<Awb>(List.of(testHawb));
 //        when(awbDao.(id)).thenReturn(List.of(testMawb));
         when(mawbHawbLinkDao.findByMawbId(any())).thenReturn(List.of(link));
-        when(awbDao.findAll(any(), any())).thenReturn(resultPage);
 
         // Mocking
         when(awbDao.findById(1L)).thenReturn(Optional.of(mockAwb));
@@ -529,12 +524,9 @@ class AwbServiceTest extends CommonMocks {
         Long id = 1L;
 
         MawbHawbLink link = MawbHawbLink.builder().hawbId(2L).mawbId(3L).build();
-        Page<Awb> resultPage = new PageImpl<Awb>(List.of(testHawb));
-//        when(awbDao.(id)).thenReturn(List.of(testMawb));
+
         when(mawbHawbLinkDao.findByMawbId(any())).thenReturn(List.of(link));
-        when(awbDao.findAll(any(), any())).thenReturn(resultPage);
-
-
+        when(awbDao.findByIds(anyList())).thenReturn(List.of(Awb.builder().awbPackingInfo(Arrays.asList()).build()));
         var awbResponse = awbService.getMawnLinkPacks(testMawb);
 
         assertEquals(testMawb, awbResponse);
@@ -571,7 +563,6 @@ class AwbServiceTest extends CommonMocks {
 
         // get Linked Hawb
         List<MawbHawbLink> mockMawbHawbLink = List.of(MawbHawbLink.builder().hawbId(1L).mawbId(3L).build());
-        Page<Awb> mockLinkedHawbPage = new PageImpl(List.of(testHawb));
 
         // Mock
         Mockito.when(awbDao.findById(id)).thenReturn(Optional.of(testMawb));
@@ -579,7 +570,6 @@ class AwbServiceTest extends CommonMocks {
         when(shipmentSettingsDao.getSettingsByTenantIds(anyList())).thenReturn(mockTenantSettingsList);
 
         when(mawbHawbLinkDao.findByMawbId(id)).thenReturn(mockMawbHawbLink);
-        when(awbDao.findAll(any(), any())).thenReturn(mockLinkedHawbPage);
 
 
         //Make service call
@@ -666,7 +656,7 @@ class AwbServiceTest extends CommonMocks {
         AwbResponse mockMawbResponse = objectMapper.convertValue(testMawb, AwbResponse.class);
 
         Mockito.when(consolidationDetailsDao.findById(any())).thenReturn(Optional.of(testConsol));
-        when(awbDao.findByShipmentId(shipmentId)).thenReturn(List.of(testHawb));
+        when(awbDao.findByShipmentIdList(Arrays.asList(shipmentId))).thenReturn(List.of(testHawb));
 
         // TenantModel Response mocking
         TenantModel mockTenantModel = new TenantModel();
@@ -718,7 +708,7 @@ class AwbServiceTest extends CommonMocks {
         AwbResponse mockMawbResponse = objectMapper.convertValue(testMawb, AwbResponse.class);
 
         Mockito.when(consolidationDetailsDao.findById(any())).thenReturn(Optional.of(testConsol));
-        when(awbDao.findByShipmentId(shipmentId)).thenReturn(List.of(testHawb));
+        when(awbDao.findByShipmentIdList(anyList())).thenReturn(List.of(testHawb));
 
         // TenantModel Response mocking
         TenantModel mockTenantModel = new TenantModel();
@@ -768,12 +758,9 @@ class AwbServiceTest extends CommonMocks {
         ShipmentSettingsDetails mockShipmentSettingDetails = ShipmentSettingsDetails.builder().consolidationLite(false).build();
 
         MawbHawbLink link = MawbHawbLink.builder().hawbId(2L).mawbId(3L).build();
-        Page<Awb> resultPage = new PageImpl<Awb>(Collections.emptyList());
         when(awbDao.findByConsolidationId(id)).thenReturn(List.of(testMawb));
         when(mawbHawbLinkDao.findByMawbId(any())).thenReturn(List.of(link));
-        when(awbDao.findAll(any(), any())).thenReturn(resultPage);
-
-        when(shipmentSettingsDao.getSettingsByTenantIds(anyList())).thenReturn(List.of(mockShipmentSettingDetails));
+        when(commonUtils.getShipmentSettingFromContext()).thenReturn(mockShipmentSettingDetails);
         when(awbDao.save(testMawb)).thenReturn(testMawb);
 
         when(jsonHelper.convertValue(any(Awb.class), eq(AwbResponse.class))).thenReturn(mockAwbResponse);
@@ -793,16 +780,62 @@ class AwbServiceTest extends CommonMocks {
 
         AwbResponse mockAwbResponse = objectMapper.convertValue(testMawb, AwbResponse.class);
         ShipmentSettingsDetails mockShipmentSettingDetails = ShipmentSettingsDetailsContext.getCurrentTenantSettings();
-
         MawbHawbLink link = MawbHawbLink.builder().hawbId(2L).mawbId(3L).build();
         Page<Awb> resultPage = new PageImpl<Awb>(List.of(testHawb));
         when(awbDao.findByConsolidationId(id)).thenReturn(List.of(testMawb));
         when(mawbHawbLinkDao.findByMawbId(any())).thenReturn(List.of(link));
-        when(awbDao.findAll(any(), any())).thenReturn(resultPage);
+//        when(awbDao.findAll(any(), any())).thenReturn(resultPage);
 
-        when(shipmentSettingsDao.getSettingsByTenantIds(anyList())).thenReturn(List.of(mockShipmentSettingDetails));
+        when(commonUtils.getShipmentSettingFromContext()).thenReturn(mockShipmentSettingDetails);
         when(awbDao.save(testMawb)).thenReturn(testMawb);
 
+        when(jsonHelper.convertValue(any(Awb.class), eq(AwbResponse.class))).thenReturn(mockAwbResponse);
+
+        var httpResponse = awbService.updateGoodsAndPacksForMawb(commonRequestModel);
+
+        assertEquals(ResponseHelper.buildSuccessResponse(mockAwbResponse), httpResponse);
+    }
+
+    @Test
+    void testUpdateGoodsAndPacksForMawb3() throws RunnerException {
+        Long id = 1L;
+        CommonRequestModel commonRequestModel = CommonRequestModel.buildRequest(CreateAwbRequest.builder().ShipmentId(id).ConsolidationId(id).build());
+
+        AwbResponse mockAwbResponse = objectMapper.convertValue(testMawb, AwbResponse.class);
+        ShipmentSettingsDetails mockShipmentSettingDetails = ShipmentSettingsDetailsContext.getCurrentTenantSettings();
+        mockShipmentSettingDetails.setConsolidationLite(true);
+        MawbHawbLink link = MawbHawbLink.builder().hawbId(2L).mawbId(3L).build();
+        when(awbDao.findByConsolidationId(id)).thenReturn(List.of(testMawb));
+        when(mawbHawbLinkDao.findByMawbId(any())).thenReturn(List.of(link));
+
+        when(commonUtils.getShipmentSettingFromContext()).thenReturn(mockShipmentSettingDetails);
+
+        when(jsonHelper.convertValue(any(Awb.class), eq(AwbResponse.class))).thenReturn(mockAwbResponse);
+
+        var httpResponse = awbService.updateGoodsAndPacksForMawb(commonRequestModel);
+
+        assertEquals(ResponseHelper.buildSuccessResponse(mockAwbResponse), httpResponse);
+    }
+
+    @Test
+    void testUpdateGoodsAndPacksForMawb4() {
+        Long id = 1L;
+        CommonRequestModel commonRequestModel = CommonRequestModel.buildRequest(CreateAwbRequest.builder().ShipmentId(id).ConsolidationId(id).build());
+
+        AwbResponse mockAwbResponse = objectMapper.convertValue(testMawb, AwbResponse.class);
+        ShipmentSettingsDetails mockShipmentSettingDetails = ShipmentSettingsDetailsContext.getCurrentTenantSettings();
+        mockShipmentSettingDetails.setConsolidationLite(true);
+        MawbHawbLink link = MawbHawbLink.builder().hawbId(2L).mawbId(3L).build();
+        when(awbDao.findByConsolidationId(id)).thenReturn(List.of(testMawb));
+        when(mawbHawbLinkDao.findByMawbId(any())).thenReturn(List.of(link));
+        when(awbDao.findByIds(anyList())).thenReturn(
+                Arrays.asList(
+                        Awb.builder()
+                                .awbPackingInfo(Arrays.asList(AwbPackingInfo.builder().build()))
+                                .build()
+                ));
+        when(commonUtils.getShipmentSettingFromContext()).thenReturn(mockShipmentSettingDetails);
+        when(awbDao.findAwbByAwbNumbers(anyList())).thenReturn(Arrays.asList(Awb.builder().awbNumber("SHP0001").build()));
         when(jsonHelper.convertValue(any(Awb.class), eq(AwbResponse.class))).thenReturn(mockAwbResponse);
 
         var httpResponse = awbService.updateGoodsAndPacksForMawb(commonRequestModel);
@@ -1021,7 +1054,7 @@ class AwbServiceTest extends CommonMocks {
 
         when(awbDao.findById(anyLong())).thenReturn(Optional.of(testMawb));
         Mockito.when(consolidationDetailsDao.findById(any())).thenReturn(Optional.of(testConsol));
-        when(awbDao.findByShipmentId(shipmentId)).thenReturn(List.of(testHawb));
+        when(awbDao.findByShipmentIdList(anyList())).thenReturn(List.of(testHawb));
 
         // TenantModel Response mocking
         TenantModel mockTenantModel = new TenantModel();
@@ -1073,7 +1106,7 @@ class AwbServiceTest extends CommonMocks {
 
         when(awbDao.findById(anyLong())).thenReturn(Optional.of(testMawb));
         Mockito.when(consolidationDetailsDao.findById(any())).thenReturn(Optional.of(testConsol));
-        when(awbDao.findByShipmentId(shipmentId)).thenReturn(List.of(testHawb));
+        when(awbDao.findByShipmentIdList(Arrays.asList(shipmentId))).thenReturn(List.of(testHawb));
 
         // TenantModel Response mocking
         TenantModel mockTenantModel = new TenantModel();
@@ -1375,7 +1408,11 @@ class AwbServiceTest extends CommonMocks {
         when(jsonHelper.convertValue(anyString(), eq(LocalDateTime.class))).thenReturn(LocalDateTime.now());
         when(jsonHelper.convertValue(any(Awb.class), eq(AwbResponse.class))).thenReturn(mockAwbResponse);
         mockShipmentSettings();
-
+        when(v1Service.fetchUnlocation(any())).thenReturn(new V1DataResponse());
+        when(jsonHelper.convertValueToList(any(), eq(EntityTransferUnLocations.class))).thenReturn(List.of(
+                EntityTransferUnLocations.builder().LocationsReferenceGUID("8F39C4F8-158E-4A10-A9B6-4E8FDF52C3BA").Name("Chennai (ex Madras)").build(),
+                EntityTransferUnLocations.builder().LocationsReferenceGUID("428A59C1-1B6C-4764-9834-4CC81912DAC0").Name("John F. Kennedy Apt/New York, NY").build()
+        ));
         var httpResponse = awbService.partialAutoUpdateAwb(commonRequestModel);
 
         assertEquals(ResponseHelper.buildSuccessResponse(mockAwbResponse), httpResponse);
@@ -1412,7 +1449,11 @@ class AwbServiceTest extends CommonMocks {
         when(jsonHelper.convertValue(anyString(), eq(LocalDateTime.class))).thenReturn(LocalDateTime.now());
         when(jsonHelper.convertValue(any(Awb.class), eq(AwbResponse.class))).thenReturn(mockAwbResponse);
         mockShipmentSettings();
-
+        when(v1Service.fetchUnlocation(any())).thenReturn(new V1DataResponse());
+        when(jsonHelper.convertValueToList(any(), eq(EntityTransferUnLocations.class))).thenReturn(List.of(
+                EntityTransferUnLocations.builder().LocationsReferenceGUID("8F39C4F8-158E-4A10-A9B6-4E8FDF52C3BA").Name("Chennai (ex Madras)").build(),
+                EntityTransferUnLocations.builder().LocationsReferenceGUID("428A59C1-1B6C-4764-9834-4CC81912DAC0").Name("John F. Kennedy Apt/New York, NY").build()
+        ));
         var httpResponse = awbService.partialAutoUpdateAwb(commonRequestModel);
 
         assertEquals(ResponseHelper.buildSuccessResponse(mockAwbResponse), httpResponse);
@@ -1482,6 +1523,13 @@ class AwbServiceTest extends CommonMocks {
         when(jsonHelper.convertValue(any(Awb.class), eq(AwbResponse.class))).thenReturn(mockAwbResponse);
 
         mockShipmentSettings();
+
+        when(v1Service.fetchUnlocation(any())).thenReturn(new V1DataResponse());
+        when(jsonHelper.convertValueToList(any(), eq(EntityTransferUnLocations.class))).thenReturn(List.of(
+                EntityTransferUnLocations.builder().LocationsReferenceGUID("8F39C4F8-158E-4A10-A9B6-4E8FDF52C3BA").Name("Chennai (ex Madras)").build(),
+                EntityTransferUnLocations.builder().LocationsReferenceGUID("428A59C1-1B6C-4764-9834-4CC81912DAC0").Name("John F. Kennedy Apt/New York, NY").build()
+        ));
+
         var httpResponse = awbService.partialAutoUpdateAwb(commonRequestModel);
 
         assertEquals(ResponseHelper.buildSuccessResponse(mockAwbResponse), httpResponse);
@@ -1570,7 +1618,7 @@ class AwbServiceTest extends CommonMocks {
 
         when(awbDao.findById(anyLong())).thenReturn(Optional.of(testMawb));
         Mockito.when(consolidationDetailsDao.findById(any())).thenReturn(Optional.of(testConsol));
-        when(awbDao.findByShipmentId(shipmentId)).thenReturn(List.of(testHawb));
+        when(awbDao.findByShipmentIdList(anyList())).thenReturn(List.of(testHawb));
 
         // TenantModel Response mocking
         TenantModel mockTenantModel = new TenantModel();
@@ -1639,6 +1687,11 @@ class AwbServiceTest extends CommonMocks {
         when(consolidationDetailsDao.findById(consolidationId)).thenReturn(Optional.of(testConsol));
         when(v1Service.fetchMasterData(any())).thenReturn(new V1DataResponse());
         when(awbDao.save(mockAwb)).thenReturn(mockAwb);
+        when(v1Service.fetchUnlocation(any())).thenReturn(new V1DataResponse());
+        when(jsonHelper.convertValueToList(any(), eq(EntityTransferUnLocations.class))).thenReturn(List.of(
+                EntityTransferUnLocations.builder().LocationsReferenceGUID("8F39C4F8-158E-4A10-A9B6-4E8FDF52C3BA").Name("Chennai (ex Madras)").build(),
+                EntityTransferUnLocations.builder().LocationsReferenceGUID("428A59C1-1B6C-4764-9834-4CC81912DAC0").Name("John F. Kennedy Apt/New York, NY").build()
+        ));
 //        when(jsonHelper.convertValue(anyString(), eq(LocalDateTime.class))).thenReturn(LocalDateTime.now());
         when(jsonHelper.convertValue(any(Awb.class), eq(AwbResponse.class))).thenReturn(mockAwbResponse);
         mockShipmentSettings();
@@ -1675,7 +1728,11 @@ class AwbServiceTest extends CommonMocks {
         when(awbDao.save(mockAwb)).thenReturn(mockAwb);
         when(jsonHelper.convertValue(anyString(), eq(LocalDateTime.class))).thenReturn(LocalDateTime.now());
         when(jsonHelper.convertValue(any(Awb.class), eq(AwbResponse.class))).thenReturn(mockAwbResponse);
-
+        when(v1Service.fetchUnlocation(any())).thenReturn(new V1DataResponse());
+        when(jsonHelper.convertValueToList(any(), eq(EntityTransferUnLocations.class))).thenReturn(List.of(
+                EntityTransferUnLocations.builder().LocationsReferenceGUID("8F39C4F8-158E-4A10-A9B6-4E8FDF52C3BA").Name("Chennai (ex Madras)").build(),
+                EntityTransferUnLocations.builder().LocationsReferenceGUID("428A59C1-1B6C-4764-9834-4CC81912DAC0").Name("John F. Kennedy Apt/New York, NY").build()
+        ));
         mockShipmentSettings();
         var httpResponse = awbService.partialAutoUpdateMawb(commonRequestModel);
 
@@ -1716,7 +1773,11 @@ class AwbServiceTest extends CommonMocks {
         when(jsonHelper.convertValue(anyString(), eq(LocalDateTime.class))).thenReturn(LocalDateTime.now());
         when(jsonHelper.convertValue(any(Awb.class), eq(AwbResponse.class))).thenReturn(mockAwbResponse);
         mockShipmentSettings();
-
+        when(v1Service.fetchUnlocation(any())).thenReturn(new V1DataResponse());
+        when(jsonHelper.convertValueToList(any(), eq(EntityTransferUnLocations.class))).thenReturn(List.of(
+                EntityTransferUnLocations.builder().LocationsReferenceGUID("8F39C4F8-158E-4A10-A9B6-4E8FDF52C3BA").Name("Chennai (ex Madras)").build(),
+                EntityTransferUnLocations.builder().LocationsReferenceGUID("428A59C1-1B6C-4764-9834-4CC81912DAC0").Name("John F. Kennedy Apt/New York, NY").build()
+        ));
         var httpResponse = awbService.partialAutoUpdateMawb(commonRequestModel);
 
         assertEquals(ResponseHelper.buildSuccessResponse(mockAwbResponse), httpResponse);
@@ -1751,6 +1812,12 @@ class AwbServiceTest extends CommonMocks {
         when(jsonHelper.convertValue(anyString(), eq(LocalDateTime.class))).thenReturn(LocalDateTime.now());
         when(jsonHelper.convertValue(any(Awb.class), eq(AwbResponse.class))).thenReturn(mockAwbResponse);
         mockShipmentSettings();
+
+        when(v1Service.fetchUnlocation(any())).thenReturn(new V1DataResponse());
+        when(jsonHelper.convertValueToList(any(), eq(EntityTransferUnLocations.class))).thenReturn(List.of(
+                EntityTransferUnLocations.builder().LocationsReferenceGUID("8F39C4F8-158E-4A10-A9B6-4E8FDF52C3BA").Name("Chennai (ex Madras)").build(),
+                EntityTransferUnLocations.builder().LocationsReferenceGUID("428A59C1-1B6C-4764-9834-4CC81912DAC0").Name("John F. Kennedy Apt/New York, NY").build()
+        ));
 
         var httpResponse = awbService.partialAutoUpdateMawb(commonRequestModel);
 
@@ -1840,8 +1907,7 @@ class AwbServiceTest extends CommonMocks {
         //Mocking
         MawbHawbLink link = MawbHawbLink.builder().hawbId(2L).mawbId(3L).build();
         when(mawbHawbLinkDao.findByMawbId(any())).thenReturn(List.of(link));
-        Page<Awb> resultPage = new PageImpl<Awb>(List.of(testHawb));
-        when(awbDao.findAll(any(), any())).thenReturn(resultPage);
+
         List<AwbResponse> awbResponse = jsonTestUtility.convertValueToList(List.of(testHawb), AwbResponse.class);
         when(jsonHelper.convertValueToList(any(), eq(AwbResponse.class))).thenReturn(awbResponse);
 
@@ -2059,6 +2125,23 @@ class AwbServiceTest extends CommonMocks {
     }
 
     @Test
+    void testFnmStatusMessageForHawbFailure1() {
+        Long shipmentId = 1L;
+
+        AirMessagingLogs statusLog = new AirMessagingLogs();
+        statusLog.setStatus(AirMessagingStatus.FAILED.name());
+
+        // Mock
+        when(awbDao.findByShipmentId(shipmentId)).thenReturn(List.of());
+
+        // Test
+        var httpResponse = awbService.getFnmStatusMessage(Optional.of(shipmentId), Optional.empty());
+
+        // Assert
+        assertEquals(HttpStatus.OK, httpResponse.getStatusCode());
+    }
+
+    @Test
     void testFnmStatusMessageForHawbSuccess() {
         Long shipmentId = 1L;
 
@@ -2092,7 +2175,6 @@ class AwbServiceTest extends CommonMocks {
         // Mock
         when(awbDao.findByShipmentId(shipmentId)).thenReturn(List.of(testDmawb));
         when(airMessagingLogsService.getRecentLogForEntityGuid(testDmawb.getGuid())).thenReturn(statusLog);
-        when(awbDao.findAll(any(), any())).thenReturn(Page.empty());
 
         // Test
         var httpResponse = awbService.getFnmStatusMessage(Optional.of(shipmentId), Optional.empty());
@@ -2110,14 +2192,9 @@ class AwbServiceTest extends CommonMocks {
         String responseMessage = "FWB and FZB submissions are accepted";
         FnmStatusMessageResponse fnmStatusMessageResponse = FnmStatusMessageResponse.builder().fnmStatus(true).response(responseMessage).build();
 
-        Page<Awb> linkedAwbPage = new PageImpl(List.of(testHawb));
-
-
         // Mock
         when(awbDao.findByConsolidationId(consolidationId)).thenReturn(List.of(testMawb));
         when(airMessagingLogsService.getRecentLogForEntityGuid(testMawb.getGuid())).thenReturn(statusLog);
-        when(airMessagingLogsService.getRecentLogForEntityGuid(testHawb.getGuid())).thenReturn(statusLog);
-        when(awbDao.findAll(any(), any())).thenReturn(linkedAwbPage);
 
         // Test
         var httpResponse = awbService.getFnmStatusMessage(Optional.empty(),Optional.of(consolidationId));
@@ -2140,14 +2217,11 @@ class AwbServiceTest extends CommonMocks {
                 AirMessagingLogsConstants.CONSOLIDATION_FNM_MAWB_FAILURE_HAWB_SUCCESS_ERROR, failureLog.getErrorMessage());
         FnmStatusMessageResponse fnmStatusMessageResponse = FnmStatusMessageResponse.builder().fnmStatus(false).response(responseMessage).build();
 
-        Page<Awb> linkedAwbPage = new PageImpl(List.of(testHawb));
 
 
         // Mock
         when(awbDao.findByConsolidationId(consolidationId)).thenReturn(List.of(testMawb));
         when(airMessagingLogsService.getRecentLogForEntityGuid(testMawb.getGuid())).thenReturn(failureLog);
-        when(airMessagingLogsService.getRecentLogForEntityGuid(testHawb.getGuid())).thenReturn(successLog);
-        when(awbDao.findAll(any(), any())).thenReturn(linkedAwbPage);
 
         // Test
         var httpResponse = awbService.getFnmStatusMessage(Optional.empty(),Optional.of(consolidationId));
@@ -2174,17 +2248,12 @@ class AwbServiceTest extends CommonMocks {
                 AirMessagingLogsConstants.CONSOLIDATION_FNM_MAWB_FAILURE_HAWB_FAILURE_ERROR, shipmentNumbersString);
         FnmStatusMessageResponse fnmStatusMessageResponse = FnmStatusMessageResponse.builder().fnmStatus(false).response(responseMessage).build();
 
-        Page<Awb> linkedAwbPage = new PageImpl(List.of(testHawb));
-
-
-
-
         // Mock
         when(awbDao.findByConsolidationId(consolidationId)).thenReturn(List.of(testMawb));
         when(airMessagingLogsService.getRecentLogForEntityGuid(testMawb.getGuid())).thenReturn(failureLog);
         when(airMessagingLogsService.getRecentLogForEntityGuid(testHawb.getGuid())).thenReturn(failureLog);
-        when(awbDao.findAll(any(), any())).thenReturn(linkedAwbPage);
-        when(shipmentDao.findAll(any(), any())).thenReturn(shipmentDetailsPage);
+        when(awbDao.findByIds(any())).thenReturn(List.of(testHawb));
+        when(shipmentDao.findShipmentsByIds(any())).thenReturn(List.of(testShipment));
 
         // Test
         var httpResponse = awbService.getFnmStatusMessage(Optional.empty(),Optional.of(consolidationId));
@@ -2211,23 +2280,18 @@ class AwbServiceTest extends CommonMocks {
                 AirMessagingLogsConstants.CONSOLIDATION_FNM_MAWB_SUCCESS_HAWB_FAILURE_ERROR, shipmentNumbersString);
         FnmStatusMessageResponse fnmStatusMessageResponse = FnmStatusMessageResponse.builder().fnmStatus(false).response(responseMessage).build();
 
-        Page<Awb> linkedAwbPage = new PageImpl(List.of(testHawb));
-
-
-
-
         // Mock
         when(awbDao.findByConsolidationId(consolidationId)).thenReturn(List.of(testMawb));
         when(airMessagingLogsService.getRecentLogForEntityGuid(testMawb.getGuid())).thenReturn(successLog);
         when(airMessagingLogsService.getRecentLogForEntityGuid(testHawb.getGuid())).thenReturn(failureLog);
-        when(awbDao.findAll(any(), any())).thenReturn(linkedAwbPage);
-        when(shipmentDao.findAll(any(), any())).thenReturn(shipmentDetailsPage);
+        when(awbDao.findByIds(any())).thenReturn(List.of(testHawb));
+        when(shipmentDao.findShipmentsByIds(any())).thenReturn(List.of(testShipment));
 
         // Test
         var httpResponse = awbService.getFnmStatusMessage(Optional.empty(),Optional.of(consolidationId));
 
         // Assert
-        assertEquals(ResponseHelper.buildSuccessResponse(fnmStatusMessageResponse), httpResponse);
+        assertEquals(HttpStatus.OK, httpResponse.getStatusCode());
 
     }
 
@@ -2820,7 +2884,7 @@ class AwbServiceTest extends CommonMocks {
             List.of(consoleShipmentMapping)
         );
         when(mawbHawbLinkDao.findByMawbId(mockAwb.getId())).thenReturn(Collections.EMPTY_LIST);
-        when(awbDao.findByShipmentId(1L)).thenReturn(List.of(testHawb));
+        when(awbDao.findByShipmentIdList(Arrays.asList(1L))).thenReturn(List.of(testHawb));
 
         errors.add("Additional Shipments have been attached, please reset data as required.");
 
